--- a/src/_includes/base.njk
+++ b/src/_includes/base.njk
@@ -8,14 +8,13 @@
         <meta name="viewport" content="width=device-width, initial-scale=1"/>
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1"/>
         <link
-        rel="stylesheet" href="/assets/vendor/font-awesome/css/font-awesome.min.css"/> <!-- Bootstrap -->
+        rel="stylesheet" href="{{ '/assets/vendor/font-awesome/css/font-awesome.min.css' | url }}"/> <!-- Bootstrap -->
         <link
-        rel="stylesheet" href="/assets/vendor/bootstrap/bootstrap.min.css"/> <!-- Stylesheets -->
+        rel="stylesheet" href="{{ '/assets/vendor/bootstrap/bootstrap.min.css' | url }}"/> <!-- Stylesheets -->
         <link
-        href="/assets/css/style.css" rel="stylesheet"/> <!--Favicon-->
-        <link rel="shortcut icon" href="/assets/images/favIcon.png" type="image/x-icon"/>
-        <link rel="icon" href="/assets/images/favIcon.png" type="image/x-icon"/>
-        
+        href="{{ '/assets/css/style.css' | url }}" rel="stylesheet"/> <!--Favicon-->
+        <link rel="shortcut icon" href="{{ '/assets/images/favIcon.png' | url }}" type="image/x-icon"/>
+        <link rel="icon" href="{{ '/assets/images/favIcon.png' | url }}" type="image/x-icon"/>
         {% if excludeTracking != true %}
             <!-- Facebook Pixel -->
             <!-- Google Analytics --><script async src="https://www.googletagmanager.com/gtag/js?id=GA_MEASUREMENT_ID"> </script>
@@ -33,8 +32,8 @@
         {% block navbar %}
             <nav class="navbar navbar-expand-lg site-navigation">
                 <div class="container">
-                    <a class="navbar-brand" href="/">
-                        <img src="{{ nav.navLogo }}" alt="nav-logo"/>
+                    <a class="navbar-brand" href="{{ '/' | url }}">
+                        <img src="{{ nav.navLogo | url }}" alt="nav-logo"/>
                     </a>
                     <button
                         class="navbar-toggler collapsed"
@@ -53,14 +52,14 @@
                             {% for navLink in nav.navLinks %}
                                 <li class="nav-item">
                                     {% if navLink == "home" %}
-                                        <a class="nav-link" href="/">{{ navLink | capitalize }}</a>
+                                        <a class="nav-link" href="{{ '/' | url }}">{{ navLink | capitalize }}</a>
                                     {% else %}
-                                        <a class="nav-link" href="/{{ navLink }}">{{ navLink | capitalize }}</a>
+                                        <a class="nav-link" href="{{ ('/' + navLink) | url }}">{{ navLink | capitalize }}</a>
                                     {% endif %}
                                 </li>
                             {% endfor %}
                             <li class="nav-item">
-                                <a class="nav-link btn btn-sm btn-primary btn-sm-rounded text-light" href="/{{ nav.navBtnLink }}">
+                                <a class="nav-link btn btn-sm btn-primary btn-sm-rounded text-light" href="{{ ('/' + nav.navBtnLink) | url }}">
                                     <span class="btn-area">
                                         <span data-text="{{ nav.navBtnText }}">
                                             {{ nav.navBtnText }}
@@ -84,7 +83,7 @@
                             <h1 class="site-cta-title">{{ workTogether.heading }}</h1>
                             <ul class="site-cta-buttons">
                                 <li>
-                                    <a href="/{{ workTogether.submitBtn.btnLink }}" class="btn btn-secondary">
+                                    <a href="{{ ('/' + workTogether.submitBtn.btnLink) | url }}" class="btn btn-secondary">
                                         <span class="btn-area">
                                             <span data-text="{{ workTogether.submitBtn.btnText }}">
                                                 {{ workTogether.submitBtn.btnText }}
@@ -93,7 +92,7 @@
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="/{{ workTogether.convBtn.btnLink }}" class="btn btn-primary">
+                                    <a href="{{ ('/' + workTogether.convBtn.btnLink) | url }}" class="btn btn-primary">
                                         <span class="btn-area">
                                             <span data-text="{{ workTogether.convBtn.btnText }}">
                                                 {{ workTogether.convBtn.btnText }}
@@ -113,8 +112,8 @@
                     <div class="row">
                         <div class="col-12">
                             <div class="site-footer-logo">
-                                <a href="/">
-                                    <img src="{{ footer.footerLogo }}" alt="logo-footer" width="100">
+                                <a href="{{ '/' | url }}">
+                                    <img src="{{ footer.footerLogo | url }}" alt="logo-footer" width="100">
                                 </a>
                             </div>
                         </div>
@@ -135,7 +134,7 @@
                                 <ul class="site-footer-widget-links">
                                     {% for siteMap in footer.siteMap %}
                                         <li>
-                                            <a href="/{{ siteMap.link }}">{{ siteMap.text }}</a>
+                                            <a href="{{ ('/' + siteMap.link) | url }}">{{ siteMap.text }}</a>
                                         </li>
                                     {% endfor %}
                                 </ul>
@@ -147,7 +146,7 @@
                                 <ul class="site-footer-widget-links">
                                     {% for socialMedia in footer.socialMedia %}
                                         <li>
-                                            <a href="/{{ socialMedia.link }}">{{ socialMedia.text }}</a>
+                                            <a href="{{ ('/' + socialMedia.link) | url }}">{{ socialMedia.text }}</a>
                                         </li>
                                     {% endfor %}
                                 </ul>
@@ -165,7 +164,7 @@
                         </div>
                         <div class="col-lg-2 col-12">
                             <a href="#top" class="site-footer-widget-top">
-                                <img src="{{ footer.back2topIcon }}" alt="back-to-top">
+                                <img src="{{ footer.back2topIcon | url }}" alt="back-to-top">
                                 <p>
                                     {{ footer.customerComment | safe }}
                                 </p>
@@ -183,7 +182,7 @@
             </footer>
         {% endblock %}
         <!-- <script src="js/vendor.js"></script> -->
-        <script src="/assets/vendor/bootstrap/bootstrap.min.js"></script>
-        <script src="/assets/js/script.js"></script>
+        <script src="{{ '/assets/vendor/bootstrap/bootstrap.min.js' | url }}"></script>
+        <script src="{{ '/assets/js/script.js' | url }}"></script>
     </body>
 </html>
