--- a/src/_includes/layouts/projectSingle.njk
+++ b/src/_includes/layouts/projectSingle.njk
@@ -14,8 +14,8 @@
                 {{content | safe}}
               </div>
               <div class="site-project-single-image">
-                <img src="{{featureImg1}}" alt="project image">
-                <img src="{{featureImg2}}" alt="project image">
+                <img src="{{featureImg1 | url}}" alt="project image">
+                <img src="{{featureImg2 | url}}" alt="project image">
               </div>
               {% if collections.portfolios %}
               {% set nextPost = collections.portfolios | getNextCollectionItem(page) %}
@@ -23,8 +23,8 @@
               
               <div class="site-project-single-action d-flex justify-content-between">
                 {% if previousPost%}
-                <a href="{{previousPost.url}}">
-                  <img class="rev" src="/assets/images/to-top.svg" alt="next project">
+                <a href="{{previousPost.url | url}}">
+                  <img class="rev" src="{{ '/assets/images/to-top.svg' | url }}" alt="next project">
                   <span class="link-area">
                     <span data-text="{{previousPost.data.title}}">
                       Previous Project
@@ -33,13 +33,13 @@
                 </a>
                 {% endif %}
                 {% if nextPost %}
-                <a href="{{nextPost.url}}">
+                <a href="{{nextPost.url | url}}">
                   <span class="link-area">
                     <span data-text="{{nextPost.data.title}}">
                       Next Project
                     </span>
                   </span>
-                  <img src="/assets/images/to-top.svg" alt="next project">
+                  <img src="{{ '/assets/images/to-top.svg' | url }}" alt="next project">
                 </a> 
                 {% endif %} 
               </div>
