--- a/src/_includes/layouts/homepage.njk
+++ b/src/_includes/layouts/homepage.njk
@@ -38,7 +38,7 @@
         </div>
       </div>
       <a href="#counter" class="site-hero-scroll scroll-to">
-        <img src="/assets/images/arrow-down.svg" alt="arrow-down">
+        <img src="{{ '/assets/images/arrow-down.svg' | url }}" alt="arrow-down">
       </a>
     </section>
 
