--- a/src/_includes/layouts/homepage.njk
+++ b/src/_includes/layouts/homepage.njk
@@ -7,7 +7,7 @@
         <div class="row">
           <div class="col-lg-10 mx-auto">
             <div class="site-hero-content text-center">
-              <h6>{{hero.subTitle}}</h6>
+              <h6 class="txt-secondary">{{hero.subTitle}}</h6>
               <h1>
                 {{hero.title.firstPara}}
                 <br>
