--- a/src/_includes/base.njk
+++ b/src/_includes/base.njk
@@ -12,9 +12,9 @@
         <link
         rel="stylesheet" href="{{ '/assets/vendor/bootstrap/bootstrap.min.css' | url }}"/> <!-- Stylesheets -->
         <link
-        href="{{ '/assets/css/style.css' | url }}" rel="stylesheet"/> <!--Favicon-->
-        <link rel="shortcut icon" href="{{ '/assets/images/favIcon.png' | url }}" type="image/x-icon"/>
-        <link rel="icon" href="{{ '/assets/images/favIcon.png' | url }}" type="image/x-icon"/>
+        href="{{ '/assets/css/style.css' | url }}" rel="stylesheet"/>
+        <link rel="shortcut icon" href="{{ '/assets/images/favicon.png' | url }}" type="image/x-icon"/>
+        <link rel="icon" href="{{ '/assets/images/favicon.png' | url }}" type="image/x-icon"/>
         {% if excludeTracking != true %}
             <!-- Facebook Pixel -->
             <!-- Google Analytics --><script async src="https://www.googletagmanager.com/gtag/js?id=GA_MEASUREMENT_ID"> </script>
