--- a/src/_includes/base.njk
+++ b/src/_includes/base.njk
@@ -11,8 +11,7 @@
         rel="stylesheet" href="{{ '/assets/vendor/font-awesome/css/font-awesome.min.css' | url }}"/> <!-- Bootstrap -->
         <link
         rel="stylesheet" href="{{ '/assets/vendor/bootstrap/bootstrap.min.css' | url }}"/> <!-- Stylesheets -->
-        <link
-        href="{{ '/assets/css/style.css' | url }}" rel="stylesheet"/>
+        <link href="{{ '/assets/css/style.css' | url }}" rel="stylesheet"/>
         <link rel="shortcut icon" href="{{ '/assets/images/favicon.png' | url }}" type="image/x-icon"/>
         <link rel="icon" href="{{ '/assets/images/favicon.png' | url }}" type="image/x-icon"/>
         {% if excludeTracking != true %}
@@ -110,21 +109,19 @@
             <footer class="site-footer">
                 <div class="container">
                     <div class="row">
-                        <div class="col-12">
-                            <div class="site-footer-logo">
-                                <a href="{{ '/' | url }}">
-                                    <img src="{{ footer.footerLogo | url }}" alt="logo-footer" width="100">
-                                </a>
-                            </div>
-                        </div>
+                        {# <div class="col-12"></div> #}
                         <div class="col-lg-3 col-md-6">
                             <div class="site-footer-widget">
-                                <h5 class="site-footer-widget-title">{{ footer.contactsHeading }}</h5>
+                                <div class="site-footer-logo">
+                                    <a href="{{ '/' | url }}">
+                                        <img src="{{ footer.footerLogo | url }}" alt="logo-footer" width="100">
+                                    </a>
+                                </div>
                                 <p class="site-footer-widget-description">
-                                    {% for contactInfo in footer.contactsInfo %}
+                                    {# {% for contactInfo in footer.contactsInfo %}
                                         <a href="{{ contactInfo.link }}">{{ contactInfo.text }}</a>
                                         <br>
-                                    {% endfor %}
+                                    {% endfor %} #}
                                 </p>
                             </div>
                         </div>
