--- a/src/_includes/layouts/homepage.njk
+++ b/src/_includes/layouts/homepage.njk
@@ -47,14 +47,14 @@
         <div class="row">
           <div class="col-12">
             <div class="section-title">
-              <h2 class="text-white">{{achieve.title}}</h2>
+              <h2 class="txt-dark">{{achieve.title}}</h2>
             </div>
           </div>
           {% for achievement in achieve.achievements %}
           <div class="col-lg-3 col-md-6">
             <div class="site-counter-item">
-              <span class="site-counter-item-title">{{achievement.title}}</span>
-              <h3 class="site-counter-item-number">{{achievement.counter}}+</h3>
+              <span class="site-counter-item-title txt-dark">{{achievement.title}}</span>
+              <h3 class="site-counter-item-number txt-dark">{{achievement.counter}}+</h3>
             </div>
           </div> 
           {% endfor %}
@@ -86,7 +86,7 @@
           </div>
           {% endfor %}
           <div class="col-12 text-center text-lg-start">
-            <a href="/{{portfolio.seeAllbtn.link | url}}" class="text-disrupt">{{portfolio.seeAllbtn.text}}</a>
+            <a href="{{ portfolio.seeAllbtn.link | url}}" class="text-disrupt">{{portfolio.seeAllbtn.text}}</a>
           </div>
         </div>
       </div>
