--- a/src/_includes/base.njk
+++ b/src/_includes/base.njk
@@ -29,7 +29,7 @@
     </head>
     <body>
         {% block navbar %}
-            <nav class="navbar navbar-expand-lg site-navigation">
+            <nav class="navbar navbar-expand-lg site-navigation nav-bg">
                 <div class="container">
                     <a class="navbar-brand" href="{{ '/' | url }}">
                         <img src="{{ nav.navLogo | url }}" alt="nav-logo"/>
