--- a/src/_includes/layouts/automationSales.njk
+++ b/src/_includes/layouts/automationSales.njk
@@ -1,4 +1,5 @@
 {% extends "base.njk" %}
+
 {% block content %}
     <!-- Hero Section -->
     <section class="site-hero">
@@ -113,7 +114,7 @@
             </div>
         </div>
     </section>
-    <section class="bg-white pt-5">
+    <section class="bg-white py-5">
         <div
             class="container">
             <!-- Why Solutions Fail -->
@@ -141,7 +142,7 @@
         </div>
     </section>
     <!-- Solution Section -->
-    <section>
+    <section class="py-5">
         <div class="container">
             <div class="row">
                 <div class="col-lg-10 mx-auto">
@@ -152,7 +153,7 @@
                         </div>
                     </div>
                     <!-- System Components -->
-                    <div class="mb-5">
+                    <div>
                         <h3 class="mb-4">Our system integrates:</h3>
                         <div class="row">
                             {% for component in automationSales.solution.components %}
